add user and return view

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,2 +1,5 @@
 <h1>User#show</h1>
-<p>Find me in app/views/user/show.html.erb</p>
+<% @users.each do |user| %>
+  Name: <%= user[:name] %>
+  <%= user[:address] %> <br/>
+<% end %>
